# rumbler

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: release-drafter.yml  rust.yml
acceptance_tests/: Dockerfile  docker-compose.yml
acceptance_tests/lib/test_helpers/: load.bash
acceptance_tests/migrations/: 001_create_users.sql  002_add_email_to_users.sql  003_create_posts.sql
acceptance_tests/tests/: acceptance.bats  apply.bats  dry-run.bats  import-rambler.bats  no-save.bats  ordering.bats  reverse.bats  role.bats
dev/: acceptance-tests.sh
src/: apply.rs  config.rs  db.rs  error.rs  lint.rs  main.rs  migration.rs  reverse.rs  template.rs
src/config/: lib.rs
