[package]
name = "rumbler"
version = "0.1.0"
edition = "2021"
description = "A simple SQL schema migration tool for PostgreSQL"

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"

[dependencies]
clap = { version = "4", features = ["derive"] }
envconfig = "0.11"
postgres = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
sha2 = "0.10"
sqruff-lib = "0.34"
sqruff-lib-core = "0.34"
itertools = "0.14"
subst = "0.3"

[dev-dependencies]
tempfile = "3"
sealed_test = "1.1"
